--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         background-color: royalblue;
         width: 100vmin;
         height: 100vmin;
-        
+        display: grid;
+        grid-template-rows: repeat(21, 1fr);
+        grid-template-columns: repeat(21, 1fr);
 
     }
 
