--- a/index.html
+++ b/index.html
@@ -23,10 +23,17 @@
         display: grid;
         grid-template-rows: repeat(21, 1fr);
         grid-template-columns: repeat(21, 1fr);
-
     }
 
-
+    .snake {    
+        background-color: seagreen(200, 100%, 50%);
+        border: .25vmin solid black;
+    }
+    
+    .food {
+        background-color: slateblue(50, 100%, 50%);
+        border: .25vmin solid black;
+    }
 
     </style>
 </head>
