adding main function to game in js file

--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
         background-color: seagreen(200, 100%, 50%);
         border: .25vmin solid black;
     }
-    
+
     .food {
         background-color: slateblue(50, 100%, 50%);
         border: .25vmin solid black;
     }
 
     </style>
+    <script src="game.js" defer type="module"></script>
 </head>
 <body>
     <div id="game-board"></div>
