--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     #game-board {
-        background-color: royalblue;
+        background-color: white;
         width: 100vmin;
         height: 100vmin;
         display: grid;
