color and design adjustment

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     #game-board {
-        background-color: white;
+        background-color: black;
         width: 100vmin;
         height: 100vmin;
         display: grid;
@@ -26,13 +26,13 @@
     }
 
     .snake {    
-        background-color: seagreen(200, 100%, 50%);
-        border: .25vmin solid black;
+        background-color: green (200, 100%, 50%);
+        border: .25vmin solid green;
     }
 
     .food {
-        background-color: slateblue(50, 100%, 50%);
-        border: .25vmin solid black;
+        background-color: slateblue (50, 100%, 50%);
+        border: .25vmin solid slateblue;
     }
 
     </style>
